--- a/package.json
+++ b/package.json
@@ -2,27 +2,28 @@
   "name": "teet",
   "version": "0.0.0",
   "description": "teet static websites from jsx and yaml, no strings attached",
-  "main": "dist/index.min.js",
-  "bin": "bin/teet",
-  "typings": "dist/index.d.ts",
+  "main": "cjs/index.js",
+  "module": "esm/index.js",
+  "bin": {
+    "teet": "bin/index.js"
+  },
+  "typings": "esm/index.d.ts",
   "scripts": {
-    "predist": "mkdirp dist && rimraf dist/*",
-    "dist": "tsc -p src --outDir dist",
+    "predist": "mkdirp esm && rimraf esm/*",
+    "dist": "tsc -p src --outDir esm",
+    "format": "prettier-standard \"{src,spec}/**/*.[jt]@(s|sx)\"",
     "postdist": "npm run uglify",
     "prepublish": "npm run test",
     "pretest": "npm run dist",
     "test": "tape \"spec/**/*.spec.js\"",
-    "uglify": "terser dist/index.js -c -m --toplevel --define process.env.NODE_ENV=\\\"production\\\" -o dist/index.min.js"
+    "uglify": "terser esm/index.js -c -m --toplevel --define process.env.NODE_ENV=\\\"production\\\" -o esm/index.min.js"
   },
   "keywords": [
     "static website generator",
     "jsx",
     "yaml"
   ],
-  "author": {
-    "name": "Stephane M. Catala",
-    "email": "stephane@zenyway.com"
-  },
+  "author": "Stephane M. Catala <stephane@zenyway.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -37,7 +38,11 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "@babel/register": "7.4.4",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.5.5",
     "clone-deep": "4.0.1",
     "esm": "3.2.25",
     "glob": "7.1.4",
@@ -48,20 +53,37 @@
     "rw": "1.3.3"
   },
   "devDependencies": {
+    "@types/clone-deep": "^4.0.1",
+    "@types/glob": "^7.1.1",
+    "@types/mkdirp": "^0.5.2",
     "@types/node": "12.6.9",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "common-shakeify": "0.6.2",
+    "findup-sync": "^4.0.0",
     "http-server": "0.11.1",
     "husky": "3.0.2",
     "lint-staged": "9.2.1",
     "mkdirp": "0.5.1",
     "prettier-standard": "9.1.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "rimraf": "2.6.3",
     "standard": "13.1.0",
     "tape": "4.11.0",
     "terser": "4.1.3",
     "typescript": "3.5.3"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import"
+    ],
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
   },
   "husky": {
     "hooks": {
