--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teet",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "teet static websites from jsx and yaml, no strings attached",
   "main": "cjs/index.js",
   "module": "esm/index.js",
@@ -11,7 +11,7 @@
   "scripts": {
     "predist": "mkdirp esm && rimraf esm/*",
     "dist": "tsc -p src --outDir esm",
-    "format": "prettier-standard \"{src,spec}/**/*.[jt]@(s|sx)\"",
+    "format": "prettier-standard \"{bin,src,spec}/**/*.[jt]@(s|sx)\"",
     "postdist": "npm run uglify",
     "prepublish": "npm run test",
     "pretest": "npm run dist",
@@ -33,47 +33,46 @@
     "url": "https://github.com/smcatala/teet/issues"
   },
   "homepage": "https://github.com/smcatala/teet#readme",
-  "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
-  },
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.5.5",
-    "clone-deep": "4.0.1",
+    "@babel/core": "7.6.4",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/preset-env": "7.6.3",
+    "@babel/preset-react": "7.6.3",
+    "@babel/register": "7.6.2",
+    "basic-cursors": "3.0.0",
+    "basic-fsa-factories": "2.0.0",
+    "chokidar": "3.2.1",
     "esm": "3.2.25",
-    "findup-sync": "^4.0.0",
+    "findup-sync": "4.0.0",
+    "funky-store": "0.1.0",
     "glob": "7.1.4",
     "glob2base": "0.0.12",
     "js-yaml": "3.13.1",
     "minimist": "1.2.0",
     "mkdirp": "0.5.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "16.10.2",
+    "react-dom": "16.10.2",
     "rw": "1.3.3"
   },
   "devDependencies": {
-    "@types/clone-deep": "^4.0.1",
-    "@types/glob": "^7.1.1",
-    "@types/mkdirp": "^0.5.2",
-    "@types/node": "12.6.9",
-    "@types/react": "^16.8.24",
-    "@types/react-dom": "^16.8.5",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
-    "http-server": "0.11.1",
-    "husky": "3.0.2",
-    "lint-staged": "9.2.1",
+    "@types/chokidar": "2.1.3",
+    "@types/glob": "7.1.1",
+    "@types/mkdirp": "0.5.2",
+    "@types/node": "12.7.12",
+    "@types/react": "16.9.5",
+    "@types/react-dom": "16.9.1",
+    "@typescript-eslint/eslint-plugin": "2.3.3",
+    "@typescript-eslint/parser": "2.3.3",
+    "husky": "3.0.9",
+    "lint-staged": "9.4.2",
+    "live-server": "1.2.1",
     "mkdirp": "0.5.1",
-    "prettier-standard": "9.1.1",
-    "rimraf": "2.6.3",
-    "standard": "13.1.0",
+    "prettier-standard": "15.0.1",
+    "rimraf": "3.0.0",
+    "standard": "14.3.1",
     "tape": "4.11.0",
-    "terser": "4.1.3",
-    "typescript": "3.5.3"
+    "terser": "4.3.8",
+    "typescript": "3.6.4"
   },
   "babel": {
     "plugins": [
